@@ -814,10 +814,7 @@ class WC_Stripe_Payment_Request {
 			<div id="wc-stripe-payment-request-button">
 				<?php
 				if ( $this->is_custom_button() ) {
-					$label      = esc_html( $this->get_button_label() );
-					$class_name = esc_attr( 'button ' . $this->get_button_theme() );
-					$style      = esc_attr( 'height:' . $this->get_button_height() . 'px;' );
-					echo "<button id=\"wc-stripe-custom-button\" class=\"$class_name\" style=\"$style\"> $label </button>";
+					echo '<button id="wc-stripe-custom-button" class="' . esc_attr( 'button ' . $this->get_button_theme() ) . '" style="' . esc_attr( 'height:' . $this->get_button_height() . 'px;' ) . '"> ' . esc_html( $this->get_button_label() ) . ' </button>';
 				}
 				?>
 				<!-- A Stripe Element will be inserted here. -->
@@ -1860,7 +1857,7 @@ class WC_Stripe_Payment_Request {
 
 		return [
 			'message'      => $message,
-			'redirect_url' => $redirect_url,
+			'redirect_url' => wp_sanitize_redirect( esc_url_raw( $redirect_url ) ),
 		];
 	}
 
